@@ -22,7 +22,6 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 {
   try
     {
-
       // Initialize orb
       CORBA::ORB_var orb = CORBA::ORB_init (argc, argv);
 
@@ -31,12 +30,20 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
         = orb->string_to_object (ior);
       Benchmark::RoundTripClient_var test =
         Benchmark::RoundTripClient::_narrow(obj.in());
-      //Get the RoundTrip reference
-      Benchmark::Controller_var trigger = test->provide_controller ();
+        
+      if (CORBA::is_nil (test.in ()))
+        ACE_ERROR_RETURN ((LM_ERROR, "Unable to acquire RoundTripClient objref\n"), -1);
 
-      //Send a trigger to start the test
+      // Get the RoundTrip reference
+      obj = test->provide_facet ("controller");
+      Benchmark::Controller_var trigger = 
+        Benchmark::Controller::_narrow (obj.in ());
+
+      if (CORBA::is_nil (trigger.in ()))
+        ACE_ERROR_RETURN ((LM_ERROR, "Unable to acquire Controller objref\n"), -1);
+
+      // Send a trigger to start the test
       trigger->start();
-
     }
   catch (const CORBA::Exception& ex)
     {
